Fixing gap bug

--- a/client/src/pages/read/read.module.css
+++ b/client/src/pages/read/read.module.css
@@ -80,6 +80,7 @@
 
 .imageContainer {
 	width: 100%;
+	display: flex;
 }
 
 .chapters img {
